<resources>
    <string name="app_name">MALLIONE</string>
    <string name="App_name">MALLIONE</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="error">An error on a server, try again.</string>
    <string name="nuberPhone">Number phone</string>
    <string name="password">Password</string>
    <string name="confrimPassword">Confrim password</string>
    <string name="fio">Surname Name Patronymic</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="register">Registration</string>
    <string name="becomeOurCustomer">Become our customer</string>
    <string name="haveAnAccount"><i><u>Do you already have an account?</u></i></string>
    <string name="loginUnderline"><i><u>login</u></i></string>
    <string name="login">login</string>
    <string name="enterPhone">Enter number phone</string>
    <string name="enterPassword">Enter password</string>
    <string name="enterPasswordConfrim">Enter confrim password</string>
    <string name="enterUserName">Enter user name</string>
    <string name="enterEmail">Enter email</string>
    <string name="enterCorrectEmail">Enter correct email</string>
    <string name="enterCity">Enter city</string>
    <string name="enterAddress1">Enter address 1</string>
    <string name="selectCity">Select city</string>
    <string name="ok">Ok</string>
    <string name="cancel">cancel</string>
    <string name="groupUser">User group</string>
    <string name="selectUserGroup">Select user group</string>
    <string name="forgotPassword"><i><u>Forgot password?</u></i></string>
    <string name="haveAccount"><i><u>You still do not have an account?</u></i></string>
    <string name="registerNow"><u><i>Register now!</i></u></string>
    <string name="buyer">Buyer</string>
    <string name="manager">Manager</string>
    <string name="courier">Courier</string>
    <string name="TINTaxpayer">TIN Taxpayer</string>
    <string name="selectSupplier">Select supplier</string>
    <string name="enterSupplier">Enter supplier</string>
    <string name="accountType">Account Type:</string>
    <string name="driverLincense">Driver lincense</string>
    <string name="carBrand">Car brand</string>
    <string name="numberCar">Number car</string>
    <string name="colorCar">Color car</string>
    <string name="enter">Enter</string>
    <string name="select">Select</string>
    <string name="title_activity_buyer">Buyer</string>
    <string name="logout">logout</string>
    <string name="passwordMore">Password should be at least 6 characters.</string>
    <string name="title_activity_buer">buerActivity</string>
    <string name="title_activity_manager">ManagerActivity</string>
    <string name="title_activity_courier">CourierActivity</string>
    <string name="catalog">Catalog</string>
    <string name="profile">Profile</string>
    <string name="basket">Basket</string>
    <string name="myOrders">My orders</string>
    <string name="myServices">My services</string>
    <string name="myFavorites">My Favorites</string>
    <string name="notifications">Notifications</string>
    <string name="save">save</string>
    <string name="description">Description</string>
    <string name="totalProduct">Total products:</string>
    <string name="deleteItem">Delete product?</string>
    <string name="order">Order</string>
    <string name="checkout">checkout</string>
    <string name="OrderDelivery">Order delivery at</string>
    <string name="addressText">If you specify a full address (ground floor, entrance, intercom system or code) bkureru not need to specify its Additional.</string>
    <string name="selectDate">Select date and time</string>
    <string name="selectPayment">Select payment method</string>
    <string name="byCash">By cash</string>
    <string name="card">Card</string>
    <string name="confrim">Confrim</string>
    <string name="totalPrice">Total price</string>
    <string name="hintAddress">Street, Number home, Number room, level</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="enterAddress">Enter address</string>
    <string name="enterDate">Enter date</string>
    <string name="enterTime">Enter time</string>
    <string name="enroll">Enroll</string>
    <string name="selectTimeEnroll">Select a suitable free time.</string>
    <string name="noFreeTime">No free time.</string>
    <string name="price">Price:</string>
    <string name="id">Order №</string>
    <string name="current">Current</string>
    <string name="finished">Finished</string>
    <string name="TotalPriceOrder">Total price order:</string>
    <string name="assess">Assess</string>
    <string name="writeComment">Write comment</string>
    <string name="assessShop">Assess shop</string>
    <string name="assessCourier">Assess courier</string>
    <string name="infoOrder">Information order:</string>
    <string name="commentOrder">Comment order:</string>
    <string name="dateOrder">Date order</string>
    <string name="addressPostage">Address postage:</string>
    <string name="statusOrder">Status order:</string>
    <string name="timeOrder">Time postage order:</string>
    <string name="typePayment">Type payment:</string>
    <string name="statusPayment">Status payment:</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="totalPriceOrder">Total price order</string>
    <string name="tryAgain">Authorisation Error. Try again.</string>
    <string name="Address">Address</string>
    <string name="ShowShopInfo">Go to shop</string>
    <string name="feedBack">Give feedBack</string>
    <string name="openDispute">Open dispute</string>
    <string name="search">search</string>
    <string name="shops">Shops</string>
    <string name="orders">Orders</string>
    <string name="record">Records</string>
    <string name="disputs">Disputs</string>
    <string name="status">Status:</string>
    <string name="disput">Disput</string>
    <string name="closeDispute">Close dispute</string>
    <string name="enterMessage">Enter message</string>
    <string name="result">Result</string>
    <string name="send">Send</string>
    <string name="confrimOrder">Confrim order</string>
    <string name="cancelOrder">Cancel order</string>
    <string name="dispatcher">Dispatcher</string>
    <string name="addphoto">Add photo</string>
    <string name="takePhoto">Take photo</string>
    <string name="chooseGallery">Choose gallery</string>
    <string name="theme">Theme</string>
    <string name="available">Online</string>
    <string name="notAvailable">Offline</string>
    <string name="orderPicked">picked up the order</string>
    <string name="OrderDelivered">Order delivered</string>
    <string name="nameOrg">Name organization</string>
    <string name="addressOrg">Address organization</string>
    <string name="enterOrganization">Enter name organization</string>
    <string name="enterTINOrg">Enter TIN organization</string>
    <string name="title_activity_dispatcher">DispatcherActivity</string>
    <string name="couriers">Couriers</string>
    <string name="backCategory">Back category</string>
    <string name="selectCouriers">Select courier</string>
    <string name="passRecovery">Enter your E-Mail</string>
    <string name="goToOrder">Go to order</string>
    <string name="onlineOrOffline">"Become Online/Offline"</string>
    <string name="OrderPayment">Order payment</string>
    <string name="taxi">Taxi</string>
    <string name="DeliveryTime">Delivery time:</string>
    <string name="AddPhoto">Add photo</string>
    <string name="ask_for_camera_permission_button">Camera</string>
    <string name="ask_for_contacts_permission_button">Contacts</string>
    <string name="ask_for_audio_permission_button">Audio</string>
    <string name="ask_for_all_permissions_button">Request all</string>
    <string name="permission_granted_feedback">GRANTED</string>
    <string name="permission_denied_feedback">DENIED</string>
    <string name="permission_permanently_denied_feedback">PERMANENTLY DENIED</string>
    <string name="permission_unknown_feedback">UNKNOWN</string>
    <string name="all_permissions_denied_feedback">All those permissions are needed for doing some magic</string>
    <string name="camera_permission_denied_feedback">Camera permission is needed for doing some magic</string>
    <string name="contacts_permission_denied_feedback">Contacts permission is needed for doing some magic</string>
    <string name="audio_permission_denied_dialog_title">Запрос на доступ к файловой системе</string>
    <string name="audio_permission_denied_dialog_feedback">Доступ к файловой системе запрещен</string>
    <string name="permission_rationale_title">We need this permission</string>
    <string name="permission_rationale_message">This permission is needed for doing some fancy stuff so please, allow it!</string>
    <string name="permission_rationale_settings_button_text">SETTINGS</string>
</resources>
