<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
   <EditText
       android:id="@+id/formCourie.edTxDriverLincense"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:imeOptions="actionNext"
       android:hint="@string/driverLincense"
       android:gravity="center_horizontal"
       android:singleLine="true"
       android:maxLength="50"/>
    <EditText
        android:id="@+id/formCourie.edTxCarBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:hint="@string/carBrand"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:maxLength="50"/>
    <EditText
        android:id="@+id/formCourie.edTxCarNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:hint="@string/numberCar"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:maxLength="20"/>
    <EditText
        android:id="@+id/formCourie.edTxCarColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:hint="@string/colorCar"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:maxLength="30"/>
    <EditText
        android:id="@+id/formCourie.edTxTINTaxpayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/TINTaxpayer"
        android:singleLine="true"
        android:imeOptions="actionNext"/>
</LinearLayout>