<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/buerFormFragment.linearLayoutForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:id="@+id/buerFormFragment.edTxPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/nuberPhone"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="30"
            android:paddingLeft="32dp"
            android:paddingRight="32dp" />

        <EditText
            android:id="@+id/buerFormFragment.edTxPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="40"
            android:paddingLeft="32dp"
            android:paddingRight="32dp" />

        <EditText
            android:id="@+id/buerFormFragment.edTxConfrimPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/confrimPassword"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="40"
            android:paddingLeft="32dp"
            android:paddingRight="32dp" />

        <EditText
            android:id="@+id/buerFormFragment.edTxUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/fio"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLength="200"
            android:paddingLeft="32dp"
            android:paddingRight="32dp" />

        <EditText
            android:id="@+id/buerFormFragment.edTxEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textWebEmailAddress"
            android:maxLength="255"
            android:paddingLeft="32dp"
            android:paddingRight="32dp" />

        <EditText
            android:id="@+id/buerFormFragment.edTxCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text=""
            android:hint="@string/city"
            android:imeOptions="actionNext"
            android:inputType="none"
            android:maxLength="255"
            android:paddingLeft="32dp"
            android:paddingRight="32dp" />



    </LinearLayout>
</LinearLayout>