<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:foreground="@null"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addphoto"
        android:id="@+id/textView6"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="64dp"
        android:textSize="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseGallery"
        android:id="@+id/btnChooseGallery"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button_blue_background"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/takePhoto"
        android:id="@+id/btnTakePhoto"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button_blue_background"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />

</LinearLayout>